--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
     <head>
         <link rel="stylesheet" href="CSS/style.css">
          <title></title>
+         <script type="JavaScript">
+            function funClick (){
+                document.getElementByID("mypara")
+            }
+
+         </script>
     </head>
 
 
@@ -29,6 +35,7 @@
               <p>
                 Born and raised in New York, Greg was always surrounded by free, creative energy. Now as a UX/UI bootcamp graduate, he’s ready to implement that same energy he felt as a kid into the technological field. With passion and creativity guiding him, he hopes to add and redefine companies aesthetics, without losing any functionality.
               </p>
+              <p id="mypara">This is a demo</p>
               <button>Download Resume</button>
             </div>
         </section>
@@ -70,18 +77,18 @@
 
                 <div class="item1">
                     <h4>Butterfly World UI Redesign</h4>
-                    <p>Butterfly Gardens are an educational and marvelous place to visit whether its with friends, family, significant others, or by yourself! This UI redesign gave potential users a simple and effective way to buy and receive tickets online, as well as a new modern UI to look at.</p>
+                    <p>Butterfly Gardens are an educational and marvelous place to visit whether its with friends, family, significant others, or by yourself! This UI redesign gave potential users a simple and effective way to buy and receive tickets online, as well as a new modern UI to look at. With over 30 people in our research pool, the code written in this project was tested with 3 different tests both online and in person. </p>
                     <button>View Project</button>
                 </div>
 
                 <div class="item2">
-                        <img class="logo" src="img/myWork_icon1.png" alt="Butterfly World Project Logo!" />
+                        <img class="Butterfly" src="img/myWork_icon1.png" alt="Butterfly World Project Logo!" />
                 </div>
 
                
                 <div class="item3">
                     <h4>SoloTrav: The Solo Travel Buddy UX Design</h4>
-                    <p>Traveling alone can be daunting for both a beginner and seasoned solo traveler. This app helps make planning a trip alone easy and effective by providing solo travelers with a way to find safe places to rest and fun activities to do.!</p>
+                    <p>Traveling alone can be daunting for both a beginner and seasoned solo traveler. This app helps make planning a trip alone easy and effective by providing solo travelers with a way to find safe places to rest and fun activities to do! Walk through the design process of a Mid-Fidelity prototype as research dictates what pain points are really in need. </p>
                     <button>View Project</button>
                 </div>
 
